--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,19 +1,10 @@
-.navbar {
-    height: 74px;
-    width: 100vw;
-    background-color: var(--css-primary);
+.nav{
     display: flex;
     justify-content: space-between;
-    align-items: center;    
-}
-
-.logo {
-    margin-left: 3vw;
-    cursor: pointer;
-}
-
-
-
-.collapse {
-    cursor: pointer;
+    align-items: center;
+     background: rgba(52, 201, 75, 1);
+     width: 100vw;
+     height: 74px;
+     padding: 0px 32px;
+     
 }
